Fixed whitespace in layout

--- a/client/src/css/districtSelection.css
+++ b/client/src/css/districtSelection.css
@@ -128,7 +128,7 @@ html,body {
     position: relative;
     display: inline-block;
     height: 100%;
-    width: 306px;
+    width: 316px;
     float: left;
     margin-right: 10px;
 }
